...
      }
    },
    "1 selected" : {
      "localizations" : {
        "de" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Adresse hinzufügen"
          }
        }
...
      }
    },
    "Add products…" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Address actions" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Addresses" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Adressen"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anwenden"
          }
        },
...
      }
    },
    "Cancel" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Close" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Create order" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Create order…" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bestellung erstellen …"
          }
        }
...
      }
    },
    "Customer list options" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Optionen der Kundenliste"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kundennummer"
          }
        }
...
      }
    },
    "Delete address" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Discard changes" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Done selecting" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Edit" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Edit customer" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kunde bearbeiten"
          }
        }
...
      }
    },
    "Edit selected" : {
      "localizations" : {
        "de" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filter"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Allgemein"
          }
        }
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inaktiver Kunde"
          }
        }
...
      }
    },
    "No customers found" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "No orders yet" : {
      "localizations" : {
        "de" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bestellhistorie"
          }
        }
...
      }
    },
    "Orders" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bestellungen"
          }
        },
...
      }
    },
    "Save" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Select customers" : {
      "localizations" : {
        "de" : {
...
