...
            TextField("Company", text: $address.company.orEmpty)
            TextField("Department", text: $address.department.orEmpty)
          }
        }
        Section("Address") {
            TextField("Street", text: $address.street)
                .accessibilityIdentifier("customer.address.street")
                .textContentType(.streetAddressLine1)
            TextField("Additional address line 1", text: $address.additionalLine.orEmpty)
            TextField("Additional address line 2", text: $address.additionalLine2.orEmpty)
            TextField("Postal code", text: $address.zipcode)
                .accessibilityIdentifier("customer.address.zipcode")
                .textContentType(.postalCode)
...
